--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,30 +1,36 @@
-pipeline {
+pipeline{
     agent any
-    stages {
-        stage('Build') {
+    stages{
+        stage("Stage 1"){
             steps {
-                sh 'mvn -B -DskipTests clean package'
+                echo "This is stage 1"
             }
         }
-        stage('Test') {
+        stage("Stage 2"){
             steps {
-                sh 'mvn test'
-            }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
+                echo "This is stage 2"
             }
         }
-        stage('Deliver') {
+        stage("Stage 3"){
             steps {
-                sh './jenkins/scripts/deliver.sh'
+                echo "This is stage 3"
             }
         }
-        stage('Complete') {
+        stage("Stage 4"){
             steps {
-                echo 'Job Complete!'
+                echo "This is stage 4"
             }
         }
+        stage("Stage 5"){
+            steps {
+                echo "This is stage 5"
+            }
+        }
+        stage("Stage 6"){
+            steps {
+                echo "This is stage 6"
+            }
+        }
+        
+ }
     }
-}
